--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "semantic-ui": "^2.2.10",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
